# aa-ledger

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .stylelintrc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  codecov.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  runtests.py  tox.ini
.devcontainer/: .env.example  Dockerfile  celery.py  devcontainer.json  docker-compose.yml  local.py  requirements.txt  setup.sql  urls.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  suggestion_report.yaml
.github/workflows/: autotester.yml  pypi.yml  release.yml
.make/conf.d/: django.mk  git.mk  pre-commit.mk  tests.mk
ledger/: __init__.py  admin.py  app_settings.py  apps.py  auth_hooks.py  checks.py  constants.py  decorators.py  errors.py  forms.py  hooks.py  providers.py  tasks.py  urls.py
ledger/api/: __init__.py  admin.py  alliance.py  character.py  corporation.py  helpers.py  ledgermanager.py  planetary.py  schema.py  templatemanager.py
ledger/api/alliance/: ledger.py  template.py
ledger/api/api_helper/: aggregator.py  alliance_helper.py  (+8 more)
ledger/constants/: pi.py
ledger/docs/: information.md  ref_type.md
ledger/helpers/: alliance.py  billboard.py  cache.py  character.py  core.py  corporation.py  data_exporter.py  discord.py  etag.py  eveonline.py  ledger_data.py  ref_type.py  static_files.py
ledger/imports/: ledger.py
ledger/locale/: django.pot
ledger/locate/: de.po
ledger/managers/: character_audit_manager.py  character_journal_manager.py  character_mining_manager.py  character_planetary_manager.py  characterjournal_manager.py  charaudit_manager.py  corpaudit_manager.py  corpjournal_manager.py  corporation_audit_manager.py  corporation_journal_manager.py  general_manager.py  ledger_manager.py  manager_helper.py  planetary_manager.py
ledger/migrations/: 0001_init_v2.py  0001_initial.py  0002_alter_characterowner_eve_character_and_more.py  0002_delete_corpsteuer_alter_characteraudit_options_and_more.py  0003_alliancebillboardentry_allianceledgerentry_and_more.py  0003_alter_characteraudit_options_and_more.py  0004_characteraudit_last_update_planetary_characterplanet_and_more.py  0005_alter_corporationaudit_options_alter_general_options.py  0006_characteraudit_character_name_and_more.py  0007_characterplanetdetails_facilitys.py  0008_alter_characterminingledger_date.py  0009_remove_characteraudit_last_update_mining_and_more.py  0010_fetch_planets_and_update_planetdetails.py  0011_create_update_status_existings.py  0012_alter_corporationwalletjournalentry_division.py  0013_delete_events.py  0014_alter_corporationaudit_options_alter_general_options_and_more.py  0015_rename_character_characteraudit_eve_character.py  0016_characterminingledger_price_per_unit.py  0017_alter_eveentity_category_alter_eveentity_eve_id_and_more.py  0018_remove_characterplanet_ledger_char_planet__58a5b6_idx_and_more.py  0019_rename_characteraudit_characterowner_and_more.py  0020_alter_characterminingledger_system_and_more.py  0021_evemarketprice.py
ledger/models/: __init__.py  characteraudit.py  corporationaudit.py  events.py  general.py  ledger.py  planetary.py
ledger/task_helpers/: __init__.py  char_helpers.py  core_helpers.py  corp_helpers.py  etag_helpers.py  plan_helpers.py
ledger/templatetags/: ledger.py
ledger/tests/: __init__.py  test_admin.py  test_auth_hook.py  test_char_index.py  test_decarators.py  test_discord_installed.py  test_hooks.py  test_optionals.py  test_providers.py  test_tasks.py  test_templatetags.py  test_view_core.py  test_views.py
ledger/view_helpers/: __init__.py  core.py  static_files.py
ledger/views/: __init__.py  index.py  pve.py
testauth/: celery.py  urls.py
testauth/settings/: base.py  local.py
tests/: celery.py  test_views.py  urls.py  views.py
tests/settings/: local.py
(+406 files in other folders)
